tests/specs/run/error_name_non_string/error_name_non_string.js.out
error: Uncaught (in promise) Error
throw new ErrorNameNonString();
      ^
    at file:///[WILDCARD]/error_name_non_string.js:[WILDCARD]
