tests/specs/run/error_name_non_string/error_name_non_string.js
class ErrorNameNonString extends Error {
  constructor() {
    super();
    this.name = 42;
  }
}

throw new ErrorNameNonString();
